# krecek

./: .clang-format  .gitignore  .gitmodules  3q  New-game.py  README.md  WARP.md
host/: .clangd  CMakeLists.txt
host/3notd/: CMakeLists.txt  assets
host/arnost/: CMakeLists.txt  assets
host/cardtest/: CMakeLists.txt
host/cerviiik/: CMakeLists.txt
host/dancekrecekandhamster/: CMakeLists.txt  assets
host/deep/: CMakeLists.txt  assets
host/demolice/: CMakeLists.txt
host/experiment/: CMakeLists.txt  assets
host/experiment-editor/: CMakeLists.txt  assets
host/hrabosi/: CMakeLists.txt  assets
host/janek/: CMakeLists.txt  assets
host/kal/: CMakeLists.txt
host/krec2ddoom/: CMakeLists.txt  assets
host/krecdoom/: CMakeLists.txt  draw_wall_column.S
host/kreckrun/: CMakeLists.txt  assets
host/krectris/: CMakeLists.txt  assets
host/menu/: CMakeLists.txt  assets
host/minesweeper/: CMakeLists.txt  assets
host/mpcerviiik/: CMakeLists.txt  assets
host/mppong/: CMakeLists.txt  assets
host/pacman/: CMakeLists.txt  assets
host/pallete/: CMakeLists.txt
host/peckovana/: CMakeLists.txt  assets
host/platform/: CMakeLists.txt
host/platform-editor/: CMakeLists.txt  assets
host/pong/: CMakeLists.txt  assets
host/puntog/: CMakeLists.txt  asset  assets
host/s_r_tester/: CMakeLists.txt
host/scoundrel/: CMakeLists.txt  assets
host/sdk/: CMakeLists.txt  audio.c  comms.c  input.c  main.c  pico.c  save.c  sdcard.c  text.c  tft.c  video.c
host/sdk/include/: hostff.h  text.h
host/smileyrace/: CMakeLists.txt  assets
host/snake/: CMakeLists.txt  assets
host/super_platform_bros/: CMakeLists.txt  assets  math.c
host/tecka/: CMakeLists.txt  assets
host/tester-3d/: CMakeLists.txt
src/: .clangd  CMakeLists.txt  main.c
src/3notd/: CMakeLists.txt  Grid2D  TODO.txt  common.h  legacy_loader.c  level.h  level_data.h  main.c  pixel.c  pixel.h  wallsrender.c
src/arnost/: CMakeLists.txt  main.c  memmap.ld
src/audiotest/: CMakeLists.txt  main.c
src/cardtest/: CMakeLists.txt  main.c
src/cerviiik/: CMakeLists.txt  main.c  memmap.ld
src/dancekrecekandhamster/: CMakeLists.txt  main.c  mainCopy.c
src/deep/: CMakeLists.txt  level.c  level.h  main.c  memmap.ld
src/deep/assets/: enemies-32x32.pxo  floors-32x32.pxo  player-32x32.pxo  walls-32x64.pxo
src/demolice/: CMakeLists.txt  main.c
src/experiment/: CMakeLists.txt  common.h  enemy.h  main.c  memmap.ld  tile.h
src/experiment-editor/: CMakeLists.txt  README.md  common.c  common.h  level.c  main.c  root.c  target.c
src/experiment/maps/: map1.c  map2.c
src/hrabosi/: CMakeLists.txt  main.c
src/hrabosi/sprites/: .gitignore  blue_tank_315.data  blue_tank_45.data  blue_tank_90.data  bullet_135.data  bullet_315.data  bullet_90.data  green_tank_0.data  green_tank_225.data  green_tank_270.data
src/hrabosi/tiles/: blue_tank.data  blue_tank_0.data  blue_tank_135.data  blue_tank_180.data  blue_tank_225.data  blue_tank_270.data  bullet.data  bullet_0.data  bullet_180.data  bullet_225.data  bullet_270.data  bullet_45.data  green_tank.data  green_tank_135.data  green_tank_180.data  green_tank_315.data  green_tank_45.data  green_tank_90.data  rgb332.gpl  rgb332.pal
src/include/boards/: krecek-011.h  krecek-09.h
src/janek/: CMakeLists.txt  main.c  memmap.ld
src/kal/: CMakeLists.txt  main.c  memmap.ld
src/krec2ddoom/: CMakeLists.txt  files.h  main.c  memmap.ld  png-transformer.py
src/krec2ddoom/auto/: safe.c
src/krec2ddoom/textures/: textures
src/krecdoom/: CMakeLists.txt  campaign.h  colors.h  common.h  enemy.c  enemy.h  graphics.c  graphics.h  help.h  include_maps.h  main.c  maps.c  maps.h  math_utils.c  math_utils.h  memmap.ld  player.c  player.h  render_asm.S  volume.c  volume.h
src/krecdoom/extras/: inludes.h
src/krecdoom/maps/: map1.c  map2.c  map3.c  map4.c  safe.c
src/krecdoom/textures/: DOORS.h  TTE_00.h  TTE_01.h  TTO_00.h  TTO_01.h  TTO_02.h  T_00.h  T_01.h  T_09.h  looker.py
src/kreckrun/: CMakeLists.txt  main.c
src/krectris/: CMakeLists.txt  main.c  memmap.ld
src/menu/: CMakeLists.txt  games.c  main.c  memmap.ld  root.c  screens.c
src/menu/assets/: icons.data.pal
src/menu/tiles/: icons.data
src/minesweeper/: CMakeLists.txt  main.c  memmap.ld
src/mpcerviiik/: CMakeLists.txt  common.h  main.c  memmap.ld  root.c  round.c
src/mppong/: CMakeLists.txt  common.h  main.c  memmap.ld  root.c  round.c
src/pacman/: CMakeLists.txt  main.c  memmap.ld
src/pacman/tiles/: ghost.data  ghost_blue.data  ghost_orange.data  ghost_pink.data  ghost_read.data  pacman.data  tiles.data
src/pallete/: CMakeLists.txt  main.c
src/peckovana/: CMakeLists.txt  dap.c  main.c  memmap.ld
src/peckovana/tiles/: MenuButton.data  background.data  bullets.data  hearts.data  left.data  powerups.data  right.data
src/platform/: CMakeLists.txt  common.h  main.c  memmap.ld
src/platform-editor/: CMakeLists.txt  assets  main.c
src/platform/maps/: map0.c  map1.c  map1c.c  map2.c  map3.c  map3c.c  map4.c  map4c.c  map5.c  mapwin.c
src/platform/songs/: song1.c
src/pong/: CMakeLists.txt  main.c  memmap.ld
src/puntog/: CMakeLists.txt  common.h  main.c
src/puntog/maps/: tuturial.c
src/radiotest/: CMakeLists.txt  main.c
src/s_r_tester/: CMakeLists.txt  help.txt  main.c  server.py
src/scoundrel/: CMakeLists.txt  main.c  memmap.ld
src/sdk/: CMakeLists.txt  audio.c  cc1101.c  cc1101.h  cc1101_regs.h  comms.c  dap.c  es8312.c  es8312_regs.h  i2s.pio  input.c  main.c  melody-lexer.c  melody-lexer.re2c  melody.c  nau88c22.c  nau88c22_regs.h  player.c  remote.c  save.c  scene.c  sdcard.c  sdcard_task.c  sdk.c  slave.c  video.c
src/sdk/fatfs/: diskio.c  ff.h  ffconf.h  ffsystem.c
src/slave/: CMakeLists.txt  cc1101.c  cc1101.h  cc1101_regs.h  common.h  main.c  memmap_no_flash.ld  stdio.c
src/smileyrace/: CMakeLists.txt  main.c  memmap.ld
src/snake/: CMakeLists.txt  main.c  memmap.ld
src/super_platform_bros/: CMakeLists.txt  main.c  math.S
src/tecka/: CMakeLists.txt  main.c  memmap.ld
src/tester-3d/: CMakeLists.txt  main.c
src/touchtest/: CMakeLists.txt  main.c
(+159 files in other folders)
