cmake_minimum_required(VERSION 3.21)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(PICO_BOARD krecek-011)
list(APPEND PICO_BOARD_HEADER_DIRS ${CMAKE_CURRENT_LIST_DIR}/include/boards)
set(PICO_SDK_PURE_C 1)

include($ENV{PICO_SDK_PATH}/pico_sdk_init.cmake)

include(../tools/png_to_header.cmake)
include(../tools/bin_to_header.cmake)

project(krecek)

option(ENABLE_OFFSETS "Compile games with different offsets for parallel flashing")

list(APPEND PICO_CONFIG_HEADER_FILES ${CMAKE_CURRENT_LIST_DIR}/vendor/pico-task/include/task_hooks.h)
pico_sdk_init()

add_compile_definitions(-DKRECEK=1)

function(krecek_set_target_options target)
  set_property(TARGET ${target} PROPERTY C_STANDARD 23)
  target_compile_options(${target} PRIVATE -Wall -Wextra -Wnull-dereference -g)
  target_compile_definitions(${target} PUBLIC PICO_MAX_SHARED_IRQ_HANDLERS=8u)
  target_compile_definitions(${target} PUBLIC PICO_STDIO_ENABLE_CRLF_SUPPORT=1)
  target_compile_definitions(${target} PUBLIC PICO_STDIO_DEFAULT_CRLF=1)
endfunction()

add_subdirectory(vendor)
add_subdirectory(slave)
add_subdirectory(sdk)
add_subdirectory(tecka)
add_subdirectory(cerviiik)
add_subdirectory(peckovana)
add_subdirectory(hrabosi)
add_subdirectory(pong)
add_subdirectory(snake)
add_subdirectory(demolice)
add_subdirectory(pallete)
add_subdirectory(pacman)
add_subdirectory(krectris)
add_subdirectory(minesweeper)
add_subdirectory(smileyrace)
add_subdirectory(experiment)
add_subdirectory(experiment-editor)
add_subdirectory(deep)
add_subdirectory(platform)
add_subdirectory(platform-editor)
add_subdirectory(scoundrel)
add_subdirectory(menu)
add_subdirectory(kreckrun)
add_subdirectory(janek)
add_subdirectory(audiotest)
add_subdirectory(radiotest)
add_subdirectory(cardtest)
add_subdirectory(touchtest)
add_subdirectory(kal)
add_subdirectory(krecdoom)
add_subdirectory(krec2ddoom)
add_subdirectory(arnost)
